# Maia-Jouenne-MLOps

./: Makefile  README.md  TODO  app.py  deployment.yaml  prometheus.yml  pyproject.toml
